--- a/templates/flyt.html
+++ b/templates/flyt.html
@@ -127,8 +127,10 @@
                     <div class="feature-icon">🎨</div>
                     <h3 class="feature-title">Two Detection Modes</h3>
                     <p class="feature-description">
-                        Sensor mode for desktop use, Wearable mode optimized for 
-                        wrist-worn devices. Works in any orientation.
+                        <strong>Sensor Mode:</strong> A bar sensor that sits in front of your computer, 
+                        tracking hand movements in 3D space. Perfect for desktop setups.<br><br>
+                        <strong>Wearable Mode:</strong> Optimized for wrist-worn devices, 
+                        tracking gestures from your wrist. Works in any orientation.
                     </p>
                 </div>
                 <div class="feature-card" data-aos="fade-up" data-aos-delay="500">
@@ -249,16 +251,16 @@
                 <div class="waitlist-form-container">
                     <div id="waitlist-error" class="waitlist-message waitlist-error" style="display: none;">
                         <svg viewBox="0 0 512 512" class="waitlist-icon">
-                            <path d="M256 40c118.621 0 216 96.075 216 216 0 119.291-96.61 216-216 216-119.244 0-216-96.562-216-216 0-119.203 96.602-216 216-216m0-32C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm-11.49 120h22.979c6.823 0 12.274 5.682 11.99 12.5l-7 168c-.268 6.428-5.556 11.5-11.99 11.5h-8.979c-6.433 0-11.722-5.073-11.99-11.5l-7-168c-.283-6.818 5.167-12.5 11.99-12.5zM256 340c-15.464 0-28 12.536-28 28s12.536 28 28 28 28-12.536 28-28-12.536-28-28-28z" />
-                        </svg>
+                                    <path d="M256 40c118.621 0 216 96.075 216 216 0 119.291-96.61 216-216 216-119.244 0-216-96.562-216-216 0-119.203 96.602-216 216-216m0-32C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm-11.49 120h22.979c6.823 0 12.274 5.682 11.99 12.5l-7 168c-.268 6.428-5.556 11.5-11.99 11.5h-8.979c-6.433 0-11.722-5.073-11.99-11.5l-7-168c-.283-6.818 5.167-12.5 11.99-12.5zM256 340c-15.464 0-28 12.536-28 28s12.536 28 28 28 28-12.536 28-28-12.536-28-28-28z" />
+                                </svg>
                         <span id="error-text">Your subscription could not be saved. Please try again.</span>
-                    </div>
+                            </div>
                     <div id="waitlist-success" class="waitlist-message waitlist-success" style="display: none;">
                         <svg viewBox="0 0 512 512" class="waitlist-icon">
-                            <path d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 464c-118.664 0-216-96.055-216-216 0-118.663 96.055-216 216-216 118.664 0 216 96.055 216 216 0 118.663-96.055 216-216 216zm141.63-274.961L217.15 376.071c-4.705 4.667-12.303 4.637-16.97-.068l-85.878-86.572c-4.667-4.705-4.637-12.303.068-16.97l8.52-8.451c4.705-4.667 12.303-4.637 16.97.068l68.976 69.533 163.441-162.13c4.705-4.667 12.303-4.637 16.97.068l8.451 8.52c4.668 4.705 4.637 12.303-.068 16.97z" />
-                        </svg>
+                                    <path d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 464c-118.664 0-216-96.055-216-216 0-118.663 96.055-216 216-216 118.664 0 216 96.055 216 216 0 118.663-96.055 216-216 216zm141.63-274.961L217.15 376.071c-4.705 4.667-12.303 4.637-16.97-.068l-85.878-86.572c-4.667-4.705-4.637-12.303.068-16.97l8.52-8.451c4.705-4.667 12.303-4.637 16.97.068l68.976 69.533 163.441-162.13c4.705-4.667 12.303-4.637 16.97.068l8.451 8.52c4.668 4.705 4.637 12.303-.068 16.97z" />
+                                </svg>
                         <span>You are on the waitlist :D</span>
-                    </div>
+                            </div>
                     <form id="waitlistForm" class="waitlist-form">
                         <div class="form-group">
                             <input 
@@ -273,8 +275,8 @@
                         </div>
                         <button type="submit" class="submit-button">
                             <span>Enter Waiting List</span>
-                        </button>
-                    </form>
+                                        </button>
+                            </form>
                 </div>
                 <p class="form-note">
                     We respect your privacy. Unsubscribe at any time.
