Update cache-busting version for CSS (v4)

--- a/templates/flyt.html
+++ b/templates/flyt.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='flyt/assets/FlytLogoRound.png') }}">
     <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='flyt/assets/FlytLogoRound.png') }}">
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='flyt/assets/FlytLogoRound.png') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='flyt/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='flyt/styles.css') }}?v=4">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
