Update template file with FlytApp image and copy CSS

--- a/templates/flyt.html
+++ b/templates/flyt.html
@@ -359,6 +359,9 @@
                     </div>
                 </div>
             </div>
+            <div class="how-it-works-visual">
+                <img src="{{ url_for('static', filename='flyt/assets/FlytApp.png') }}" alt="Flyt Application Interface" class="flyt-app-image">
+            </div>
         </div>
     </section>
 
